--- a/servicios.html
+++ b/servicios.html
@@ -74,7 +74,7 @@
                     <a href="https://www.instagram.com/coruniamericana/?hl=es-la"><i class="fab fa-instagram icon-redes-footer"></i></a>
                 </div>
                 <hr>
-                <h4>2020 Florez Roger - Muños Pedro - Ortega Yannina - Zamudio Jorge © Todos los Derechos Reservados</h4>
+                <h4>2020 Florez Roger - Muñoz Pedro - Ortega Yannina - Zamudio Jorge © Todos los Derechos Reservados</h4>
             </footer>
         </div>
 
