--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <header>
         <div class="header-content">
             <div class="logo">
-                <h1><b> Wanco</b>lombia</h1>
+                <h1><b> WanCo</b>lombia</h1>
             </div>
             <div class="menu" id="mostrar-menu">
                 <nav>
