--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
         <div class="caja1">
             <br>
-            <p class="titulo">¡Haz parte de la Familia Americana(Carmona Moments)!</p>
+            <p class="titulo">¡Haz parte de la Familia Americana!</p>
             <p class="tituloInfo">Juntos fortalecemos la calidad</p> <br>
             <p class="info">
                 En la Americana entendemos que la educación con calidad se construye,
