--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div class="caja1">
             <br>
             <p class="titulo">¡Haz parte de la Familia Americana(Carmona Moments)!</p>
-            <p class="tituloInfo">Juntos fortalecemos la calidad</p> <br>
+            <p class="tituloInfo">Juntos fortalecemos la calidad(Viloria moments)</p> <br>
             <p class="info">
                 En la Americana entendemos que la educación con calidad se construye,
                 por eso nuestros docentes y funcionarios están altamente capacitados para recibirte y
